<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.servicepoint.ServicePointActivity">

    <data>

        <import type="com.j1j2.pifalao.BuildConfig" />

        <import type="android.net.Uri" />

        <variable
            name="sercivepoint"
            type="com.j1j2.data.model.ServicePoint" />
    </data>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="@dimen/actionbar_height"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding_actionbar_btn"
                android:text="@string/icon_back"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_actionbar_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/servicepoint_actionbar_title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_actionbar_title" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_width="700px"
                android:layout_height="300px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20px"
                app:imageURI="@{Uri.parse((BuildConfig.IMAGE_URL+sercivepoint.getServicePointImg()))}"
                fresco:roundedCornerRadius="5dp"
                fresco:roundingBorderColor="@color/colorGrayCCCCCC"
                fresco:roundingBorderWidth="1px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20px"
                android:text="@{sercivepoint.getName()}"
                android:textColor="@color/colorText333"
                android:textSize="@dimen/text_biger"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="20px"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginTop="20px"
                android:text="营业时间："
                android:textColor="@color/colorText999"
                android:textSize="@dimen/text_big" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginTop="20px"
                android:text="@{sercivepoint.getServiceTime()}"
                android:textColor="@color/colorText333"
                android:textSize="@dimen/text_big" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:layout_marginTop="20px"
                android:background="@drawable/dash_divider"
                android:layerType="software" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginTop="20px"
                android:text="可提供的服务："
                android:textColor="@color/colorText999"
                android:textSize="@dimen/text_big" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginTop="20px"
                android:text="@{sercivepoint.getName()}"
                android:textColor="@color/colorText333"
                android:textSize="@dimen/text_big" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:layout_marginTop="20px"
                android:background="@drawable/dash_divider"
                android:layerType="software" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginTop="20px"
                android:text="服务点地址："
                android:textColor="@color/colorText999"
                android:textSize="@dimen/text_big" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginTop="20px"
                android:text="@{sercivepoint.getAddressDetail()}"
                android:textColor="@color/colorText333"
                android:textSize="@dimen/text_big" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:layout_marginTop="20px"
                android:background="@drawable/dash_divider"
                android:layerType="software" />


        </com.zhy.autolayout.AutoLinearLayout>


        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_bar_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="280px"
                android:layout_height="80px"
                android:background="@drawable/green_conner_hollow_btn"
                android:gravity="center"
                android:text="@string/servicepoint_call"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_big" />

            <TextView
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="280px"
                android:layout_height="80px"
                android:layout_marginLeft="100px"
                android:background="@drawable/orange_conner_hollow_btn"
                android:gravity="center"
                android:text="@string/servicepoint_in"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_big" />

        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoRelativeLayout>


</layout>